--- a/index.html
+++ b/index.html
@@ -141,27 +141,27 @@
         <p>Guide pour installer vos jeux facilement</p>
     </div>
     <div class="help-item">
-        <div class="help-icon">🔌</div>
+        <div class="help-icon"><a href="connexion.html">🔌</a></div>
         <h3>Connexion</h3>
         <p>Résoudre les problèmes de connexion</p>
     </div>
     <div class="help-item">
-        <div class="help-icon">💳</div>
+        <div class="help-icon"><a href="paiement.html">💳</a></div>
         <h3>Paiement</h3>
         <p>Informations sur les méthodes de paiement</p>
     </div>
     <div class="help-item">
-        <div class="help-icon">↩️</div>
+        <div class="help-icon"><a href="remboursement.html">↩️</a></div>
         <h3>Remboursement</h3>
         <p>Politique de remboursement sous 14 jours</p>
     </div>
     <div class="help-item">
-        <div class="help-icon">🛡️</div>
+        <div class="help-icon"><a href="securiter.html">🛡️</a></div>
         <h3>Sécurité</h3>
         <p>Protégez votre compte</p>
     </div>
     <div class="help-item">
-        <div class="help-icon">📧</div>
+        <div class="help-icon"><a href="entrainement.html">📧</a></div>
         <h3>Contact</h3>
         <p>Support disponible 24/7</p>
     </div>
