--- a/tournois.html
+++ b/tournois.html
@@ -3,32 +3,171 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameStore - Votre bibliothèque de jeux</title>
+    <title>Tournois - TechWave</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Sidebar -->
-    <aside class="sidebar">
-        <div class="logo">
-            <div class="logo-icon">G</div>
-            <span class="logo-text">GameStore</span>
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="logo">TechWave</div>
+            <ul class="nav-menu">
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="forums.html">Forums</a></li>
+                <li><a href="guides.html">Guides</a></li>
+                <li><a href="workshop.html">Workshop</a></li>
+                <li><a href="tournois.html" class="active">Tournois</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </div>
-        
-        <nav class="sidebar-nav">
-            <a href="#" class="nav-link active" data-page="store">
-                <span class="nav-icon">🏪</span>
-                <span class="nav-label">Boutique</span>
-            </a>
-            <a href="#" class="nav-link" data-page="library">
-                <span class="nav-icon">📚</span>
-                <span class="nav-label">Bibliothèque</span>
-            </a>
-            <a href="#" class="nav-link" data-page="community">
-                <span class="nav-icon">👥</span>
-                <span class="nav-label">Communauté</span>
-            </a>
-            <a href="#" class="nav-link" data-page="help">
-                <span class="nav-icon">💬</span>
-                <span class="nav-label">Aide</span>
-            </a>
-        </nav>
+    </nav>
+
+    <main class="main-content">
+        <div class="page-header">
+            <h1>Tournois E-Sport</h1>
+            <p>Participez aux compétitions et gagnez des récompenses</p>
+        </div>
+
+        <div class="tournois-tabs">
+            <button class="tab-btn active" data-tab="en-cours">En Cours</button>
+            <button class="tab-btn" data-tab="a-venir">À Venir</button>
+            <button class="tab-btn" data-tab="termines">Terminés</button>
+        </div>
+
+        <div class="tournois-container">
+            <div class="tournoi-card featured">
+                <div class="tournoi-badge">🏆 TOURNOI PRINCIPAL</div>
+                <h2>Championnat d'Hiver 2026</h2>
+                <div class="tournoi-details">
+                    <div class="detail-item">
+                        <span class="label">Date:</span>
+                        <span>15-17 Février 2026</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="label">Prix:</span>
+                        <span>50.000€</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="label">Format:</span>
+                        <span>5v5 - Double Élimination</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="label">Équipes:</span>
+                        <span>32/64</span>
+                    </div>
+                </div>
+                <div class="tournoi-progress">
+                    <div class="progress-bar">
+                        <div class="progress-fill" style="width: 50%"></div>
+                    </div>
+                    <span>50% des places remplies</span>
+                </div>
+                <button class="btn-primary">S'inscrire Maintenant</button>
+            </div>
+
+            <div class="tournoi-card">
+                <h3>Coupe de Printemps</h3>
+                <div class="tournoi-details">
+                    <div class="detail-item">
+                        <span class="label">Date:</span>
+                        <span>20 Mars 2026</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="label">Prix:</span>
+                        <span>10.000€</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="label">Format:</span>
+                        <span>1v1 - Simple Élimination</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="label">Joueurs:</span>
+                        <span>128/256</span>
+                    </div>
+                </div>
+                <button class="btn-secondary">Voir Détails</button>
+            </div>
+
+            <div class="tournoi-card">
+                <h3>Tournoi Communautaire</h3>
+                <div class="tournoi-details">
+                    <div class="detail-item">
+                        <span class="label">Date:</span>
+                        <span>25 Janvier 2026</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="label">Prix:</span>
+                        <span>2.500€</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="label">Format:</span>
+                        <span>3v3 - Round Robin</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="label">Équipes:</span>
+                        <span>12/16</span>
+                    </div>
+                </div>
+                <button class="btn-secondary">Voir Détails</button>
+            </div>
+        </div>
+
+        <div class="classement-section">
+            <h2>Classement des Joueurs</h2>
+            <table class="classement-table">
+                <thead>
+                    <tr>
+                        <th>Rang</th>
+                        <th>Joueur</th>
+                        <th>Points</th>
+                        <th>Victoires</th>
+                        <th>Tournois</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>🥇 1</td>
+                        <td>ProPlayer123</td>
+                        <td>2.450</td>
+                        <td>89</td>
+                        <td>12</td>
+                    </tr>
+                    <tr>
+                        <td>🥈 2</td>
+                        <td>EliteGamer</td>
+                        <td>2.310</td>
+                        <td>76</td>
+                        <td>11</td>
+                    </tr>
+                    <tr>
+                        <td>🥉 3</td>
+                        <td>ChampionX</td>
+                        <td>2.180</td>
+                        <td>68</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>MasterSkill</td>
+                        <td>1.980</td>
+                        <td>62</td>
+                        <td>9</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>LegendPlayer</td>
+                        <td>1.870</td>
+                        <td>58</td>
+                        <td>8</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <p>&copy; 2026 TechWave. Tous droits réservés.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
